crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_if__v_if_else_if_else.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<div v-if=\"foo\">foo</div><div v-else-if=\"bar\">bar</div><div v-else>baz</div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  if (_ctx.foo) {
    _push(`<div>foo</div>`)
  } else if (_ctx.bar) {
    _push(`<div>bar</div>`)
  } else {
    _push(`<div>baz</div>`)
  }
}
